swagger ready, basic tests added
